[tool.poetry]
name = "pinecone-ai-handbook"
version = "0.1.0"
description = "python 모르는 노인이 배워보는 Langchain"
authors = ["민수 조 <minsoo.jo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.0"
ipykernel = "^6.29.4"
langchain-community = "^0.2.0"
python-dotenv = "^1.0.1"
openai = "^1.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
