[tool.poetry]
name = "pinecone-ai-handbook"
version = "0.1.0"
description = "python 모르는 노인이 배워보는 Langchain"
authors = ["민수 조 <minsoo.jo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.23.1"
openai = ">=1.26.0"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-core = "^0.2.3"
langchain-community = "^0.2.1"
numexpr = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
